<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".VendorActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".VendorViewActivity">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/x_large_dp"
                android:layout_marginTop="@dimen/large_dp"
                android:background="@drawable/circle"
                android:elevation="5dp"
                android:transitionName="image" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x_large_dp"
                android:layout_marginTop="@dimen/x_large_dp"
                android:layout_toStartOf="@+id/logout"
                android:layout_toEndOf="@id/image"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/group_name"
                android:textAllCaps="true"
                android:textColor="@color/dark_blue" />

            <ImageButton
                android:id="@+id/logout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/large_dp"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_login_24"
                android:tint="@color/dark_blue" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginStart="@dimen/x_large_dp"
                android:layout_marginTop="@dimen/large_dp"
                android:layout_toEndOf="@id/image"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/website"
                android:textColor="@color/accentColor" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/website"
                android:layout_marginStart="@dimen/x_large_dp"
                android:layout_marginTop="@dimen/common_dp"
                android:layout_marginEnd="@dimen/large_dp"
                android:layout_toEndOf="@id/image"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/description"
                android:textColor="@color/dark_blue" />

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_marginStart="26dp"
                android:layout_marginTop="@dimen/x_large_dp"
                android:layout_marginEnd="@dimen/large_dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_dp"
                    android:drawablePadding="@dimen/large_dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_vertical"
                    android:text="@string/address"
                    android:textColor="@color/dark_blue"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_dp"
                    android:drawablePadding="@dimen/large_dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_vertical"
                    android:text="@string/contact_number"
                    android:textColor="@color/dark_blue"
                    app:drawableStartCompat="@drawable/ic_baseline_call_24" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_dp"
                    android:drawablePadding="@dimen/large_dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_vertical"
                    android:text="@string/email"
                    android:textColor="@color/dark_blue"
                    app:drawableStartCompat="@drawable/ic_round_mail_outline_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/details"
                android:layout_marginTop="@dimen/x_large_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/large_dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/your_appointments"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="13sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/noApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/no_appointments_yet"
                    android:textColor="@color/dark_blue" />

            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>