<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_p1"
                app:tint="#FF4081" />

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x_large_dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/join_us"
                android:textColor="#1F0A5A"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_dp"
                    android:layout_marginBottom="@dimen/large_dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/choose_profile_photo"
                    android:textColor="@color/accentColor" />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x_large_dp"
                    android:layout_marginTop="@dimen/large_dp"
                    android:layout_marginEnd="@dimen/x_large_dp"
                    android:layout_marginBottom="@dimen/large_dp"
                    android:background="@drawable/field_back"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x_large_dp"
                    android:layout_marginTop="@dimen/large_dp"
                    android:layout_marginEnd="@dimen/x_large_dp"
                    android:layout_marginBottom="@dimen/large_dp"
                    android:background="@drawable/field_back"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x_large_dp"
                    android:layout_marginTop="@dimen/large_dp"
                    android:layout_marginEnd="@dimen/x_large_dp"
                    android:layout_marginBottom="@dimen/large_dp"
                    android:background="@drawable/field_back"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/x_large_dp"
                        android:layout_marginTop="@dimen/large_dp"
                        android:layout_marginEnd="@dimen/x_large_dp"
                        android:layout_marginBottom="@dimen/large_dp"
                        android:background="@drawable/field_back"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color" />

                    <ImageButton
                        android:id="@+id/visiblePass"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="30sp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_baseline_visibility_24"
                        android:tag="GONE"
                        android:tint="@color/hint_color" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x_large_dp"
                    android:layout_marginTop="@dimen/large_dp"
                    android:layout_marginEnd="@dimen/x_large_dp"
                    android:layout_marginBottom="@dimen/large_dp"
                    android:background="@drawable/field_back"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/x_large_dp"
                    android:layout_marginTop="@dimen/large_dp"
                    android:drawableStart="@drawable/ic_outline_info_24"
                    android:drawablePadding="@dimen/large_dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_vertical"
                    android:text="Password must contains:"
                    android:textColor="@color/dark_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="30sp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start|top"
                    android:text="@string/password_condition"
                    android:textColor="@color/dark_blue" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/join"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/x_large_dp"
                android:layout_marginBottom="@dimen/large_dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="#FFAB40"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/join_us" />
        </LinearLayout>

    </ScrollView>
</layout>
