<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x_large_dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/large_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x_large_dp"
                android:background="@drawable/circle"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textColor="@color/dark_blue" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/common_dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/email"
                android:textColor="@color/hint_color" />

            <Button
                android:id="@+id/logOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x_large_dp"
                android:layout_marginBottom="@dimen/x_large_dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/log_out" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>