<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/large_dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/large_dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/large_dp"
            android:background="@drawable/circle"
            android:padding="2dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_dp"
            android:layout_marginTop="@dimen/x_large_dp"
            android:layout_marginEnd="@dimen/large_dp"
            android:layout_toEndOf="@id/image"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            android:text="@string/group_name"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/website"
            android:layout_marginStart="@dimen/large_dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/large_dp"
            android:layout_marginBottom="@dimen/large_dp"
            android:layout_toEndOf="@id/image"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/description"
            android:textColor="#80000000" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="@dimen/large_dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/large_dp"
            android:layout_toEndOf="@id/image"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/website"
            android:textColor="#448AFF" />
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>